[gd_scene load_steps=3 format=3 uid="uid://hmfwv4scr6lq"]

[ext_resource type="Texture2D" uid="uid://cmxgtl0uwjyme" path="res://assets/main_menu_background.png" id="1_iuohf"]
[ext_resource type="Script" path="res://src/scenes/ui/main_menu.gd" id="1_ygnp3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ygnp3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_iuohf")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 235.0
offset_right = 929.0
offset_bottom = 697.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Enter your name:"

[node name="NameLine" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Player"
placeholder_text = "name"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Enter your preferred pronouns:"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="PronounsOptions" type="OptionButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 2
popup/item_0/text = "she/her"
popup/item_0/id = 0
popup/item_1/text = "he/him"
popup/item_1/id = 1
popup/item_2/text = "they/them"
popup/item_2/id = 2
popup/item_3/text = "custom"
popup/item_3/id = 3

[node name="PronounsLine" type="LineEdit" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "they/them"
placeholder_text = "pronouns"
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Start"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/NameLine" to="." method="_on_name_line_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/VBoxContainer/PronounsOptions" to="." method="_on_pronouns_options_item_selected"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer2/VBoxContainer/PronounsLine" to="." method="_on_pronouns_line_text_changed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
